# antares

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  README_AKKA.md  README_PEKKO.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.run/: Dev Cluster Launcher.run.xml
battle/: Cargo.toml  README.md
battle/crates/battle-server/: Cargo.toml  build.rs
battle/crates/battle-server/src/: main.rs
build-logic/: build.gradle.kts  settings.gradle.kts
buildSrc/: build.gradle.kts
client/: .gitignore  Cargo.toml  README.md  build.gradle.kts  build.rs  config.yaml
client-proto/: build.gradle.kts
client/.cargo/: config.toml
client/embedded/: emmy_core.dylib  lua54.lib
client/lua/: debugger.lua  event.lua  events.lua  handler.lua  init.lua  logger.lua  msg.lua  proto.lua  schedule.lua  tools.lua
client/lua/ext/: inspect.lua  json.lua
client/lua/handlers/: console_handler.lua  handlers.lua  login_handler.lua
client/lua/managers/: managers.lua  player_manager.lua
client/silu-derive/: Cargo.toml
client/silu-derive/src/: lib.rs  lua_method.rs
client/src/: client.rs  codec.rs  config.rs  crypto.rs  ecdh.rs  event.rs  helper.rs  key_pair.rs  logger.rs  main.rs  schedule.rs
client/src/main/kotlin/com/mikai233/client/: ClientBoot.kt  ClientChannelInitializer.kt  ClientInfo.kt  GameClient.kt  NettyClient.kt
client/src/main/kotlin/com/mikai233/client/codec/: ConsoleHandler.kt
client/src/main/resources/: client.yaml  logback.xml
common/: build.gradle.kts
config/: build.gradle.kts
gate/: .gitignore  build.gradle.kts
global/: build.gradle.kts
gm/: .gitignore  build.gradle.kts
gradle/: ktor.versions.toml  lib.akka.versions.toml  lib.kotlin.versions.toml  lib.kotlinx.versions.toml  lib.ktor.versions.toml  (+7 more)
(+947 files in other folders)
